# Graphics

./: 3D notes  CMakeLists.txt  graphics notes.txt  matrix notes.txt  texture notes.txt
includes/: glad.c  glad.h  openConf.h
src/: fragmentShader.fs  fragmentShader.glsl  main.cpp  openConf.cpp  openConf.h  texLoader.cpp  texLoader.h  vertexShader.glsl  vertexShader.vs
